--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -13,6 +13,8 @@ dependencies:
 
   cupertino_icons: ^1.0.8
   shadcn_ui: ^0.31.8
+  go_router: ^16.2.4
+  dio: ^5.9.0
 
 dev_dependencies:
   flutter_test:
