--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -15,12 +15,19 @@ dependencies:
   shadcn_ui: ^0.31.8
   go_router: ^16.2.4
   dio: ^5.9.0
+  flutter_bloc: ^9.1.1
+  retrofit: ^4.7.2
+  logger: ^2.6.1
+  json_annotation: ^4.9.0
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
 
   flutter_lints: ^5.0.0
+  retrofit_generator: ^10.0.5
+  build_runner: ^2.8.0
+  json_serializable: ^6.11.1
 
 flutter:
   uses-material-design: true
