--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -19,6 +19,7 @@ dependencies:
   retrofit: ^4.7.2
   logger: ^2.6.1
   json_annotation: ^4.9.0
+  injectable: ^2.5.1
 
 dev_dependencies:
   flutter_test:
