Update pubspec.yaml and pubspec.lock to add lucide_icons dependency version 0.257.0 for enhanced icon support in the project.

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -21,6 +21,7 @@ dependencies:
   json_annotation: ^4.9.0
   injectable: ^2.5.1
   flutter_dotenv: ^6.0.0
+  lucide_icons: ^0.257.0
 
 dev_dependencies:
   flutter_test:
