--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -22,6 +22,7 @@ dependencies:
   injectable: ^2.5.1
   flutter_dotenv: ^6.0.0
   lucide_icons: ^0.257.0
+  flutter_svg: ^2.2.1
 
 dev_dependencies:
   flutter_test:
