--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -34,6 +34,7 @@ dev_dependencies:
   retrofit_generator: ^10.0.5
   build_runner: ^2.8.0
   json_serializable: ^6.11.1
+  flutter_launcher_icons: ^0.14.2
 
 flutter:
   uses-material-design: true
@@ -42,3 +43,10 @@ flutter:
     - .env
     - assets/images/
     - assets/icons/
+
+flutter_launcher_icons:
+  android: "launcher_icon"
+  ios: true
+  image_path: "assets/images/logo.png"
+  remove_alpha_ios: true
+  min_sdk_android: 21
