--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -25,6 +25,8 @@ dependencies:
   flutter_dotenv: ^6.0.0
   lucide_icons: ^0.257.0
   flutter_svg: ^2.2.1
+  equatable: ^2.0.5
+  freezed_annotation: ^3.1.0
 
 dev_dependencies:
   flutter_test:
@@ -35,6 +37,7 @@ dev_dependencies:
   build_runner: ^2.8.0
   json_serializable: ^6.11.1
   flutter_launcher_icons: ^0.14.2
+  freezed: ^3.2.3
 
 flutter:
   uses-material-design: true
