--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -27,6 +27,7 @@ dependencies:
   flutter_svg: ^2.2.1
   equatable: ^2.0.5
   freezed_annotation: ^3.1.0
+  shared_preferences: ^2.5.3
 
 dev_dependencies:
   flutter_test:
