--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -28,6 +28,8 @@ dependencies:
   equatable: ^2.0.5
   freezed_annotation: ^3.1.0
   shared_preferences: ^2.5.3
+  cached_network_image: ^3.4.1
+  sqflite: ^2.3.3
 
 dev_dependencies:
   flutter_test:
