--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -30,6 +30,7 @@ dependencies:
   shared_preferences: ^2.5.3
   cached_network_image: ^3.4.1
   intl: ^0.20.2
+  flutter_markdown: ^0.7.4+1
 
 dev_dependencies:
   flutter_test:
