--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -31,6 +31,7 @@ dependencies:
   cached_network_image: ^3.4.1
   intl: ^0.20.2
   flutter_markdown: ^0.7.4+1
+  timeago: ^3.7.0
 
 dev_dependencies:
   flutter_test:
