--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -32,6 +32,7 @@ dependencies:
   intl: ^0.20.2
   flutter_markdown: ^0.7.4+1
   timeago: ^3.7.0
+  flutter_stripe: ^12.1.0
 
 dev_dependencies:
   flutter_test:
